Criação da barra de navegação ainda não funcional close #16

--- a/festa-pi-iesb/src/app/globals.css
+++ b/festa-pi-iesb/src/app/globals.css
@@ -14,5 +14,5 @@ body {
   font-family: "itim";
   font-style: normal;
   font-display: swap;
-  src: url(../assets/fonts/Itim-Regular.ttf) format("TrueType");
+  src: url(../../public/assets/fonts/Itim-Regular.ttf) format("TrueType");
 }
